--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@theme {
+	--color-mint-500: oklch(0.72 0.11 178);
+}
+
+body {
+	@apply bg-mint-500;
+}
