Removed block and ui elements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,16 +2,7 @@
 // Components
 // - Layout
 import Layout from '../layouts/Layout.astro'
-// - UI
-import Hero from '../components/blocks/hero/HomeCTA.astro'
-import Features from '../components/blocks/features/FeatureCards.astro'
-import Testimonial from '../components/blocks/testimonials/BasicDark.astro'
-import HighlightBlocks from '../components/blocks/highlights/HightlightRows.astro'
-import CTA from '../components/blocks/CTA/BasicDark.astro'
 
-// Content
-// - Testimonial background
-import testimonialBackground from '../assets/testimonial-bg-01.webp'
 // - SEO
 const SEO = {
 	title: 'Foxi | Your Productivity Toolkit',
@@ -21,9 +12,5 @@ const SEO = {
 ---
 
 <Layout title={SEO.title} description={SEO.description} class="bg-red-500">
-	<Hero />
-	<Features />
-	<Testimonial bg={testimonialBackground} bgPosition="right" />
-	<HighlightBlocks />
-	<CTA />
+	Hello
 </Layout>
