--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,5 @@ const SEO = {
 }
 ---
 
-<Layout title={SEO.title} description={SEO.description} class="bg-red-500">
-	Hello
+<Layout title={SEO.title} description={SEO.description} >
 </Layout>
