--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,29 +3,29 @@
 @theme {
 	/* Colors */
 	/* Primary */
-	--color-primary-50: '#fdf2f8';
-	--color-primary-100: '#fce7f3';
-	--color-primary-200: '#fbcfe8';
-	--color-primary-300: '#f9a8d4';
-	--color-primary-400: '#f472b6';
-	--color-primary-500: '#E2187D';
-	--color-primary-600: '#db2777';
-	--color-primary-700: '#be185d';
-	--color-primary-800: '#9d174d';
-	--color-primary-900: '#831843';
-	--color-primary-950: '#500724';
+	--color-primary-50: #fdf2f8;
+	--color-primary-100: #fce7f3;
+	--color-primary-200: #fbcfe8;
+	--color-primary-300: #f9a8d4;
+	--color-primary-400: #f472b6;
+	--color-primary-500: #e2187d;
+	--color-primary-600: #db2777;
+	--color-primary-700: #be185d;
+	--color-primary-800: #9d174d;
+	--color-primary-900: #831843;
+	--color-primary-950: #500724;
 	/* Neutral */
-	--color-neutral-50: '#f8fafc';
-	--color-neutral-100: '#f1f5f9';
-	--color-neutral-200: '#e2e8f0';
-	--color-neutral-300: '#cbd5e1';
-	--color-neutral-400: '#94a3b8';
-	--color-neutral-500: '#64748b';
-	--color-neutral-600: '#475569';
-	--color-neutral-700: '#334155';
-	--color-neutral-800: '#1e293b';
-	--color-neutral-900: '#0f172a';
-	--color-neutral-950: '#020617';
+	--color-neutral-50: #f8fafc;
+	--color-neutral-100: #f1f5f9;
+	--color-neutral-200: #e2e8f0;
+	--color-neutral-300: #cbd5e1;
+	--color-neutral-400: #94a3b8;
+	--color-neutral-500: #64748b;
+	--color-neutral-600: #475569;
+	--color-neutral-700: #334155;
+	--color-neutral-800: #1e293b;
+	--color-neutral-900: #0f172a;
+	--color-neutral-950: #020617;
 
 	/* Fonts */
 	--font-headings: 'Outfit', sans-serif;
@@ -70,5 +70,5 @@
 }
 
 body {
-	@apply bg-white;
+	@apply bg-primary-500;
 }
