Updated button component

--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -70,10 +70,10 @@ const {
 	)
 }
 <style>
-	@reference '../../styles/global.css'
-	
+	@reference '../../styles/global.css';
+
 	.button {
-		@apply inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap rounded font-bold tracking-wide transition duration-300 focus-visible:outline-none disabled:cursor-not-allowed disabled:shadow-none;
+		@apply inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap rounded-sm font-bold tracking-wide transition duration-300 focus-visible:outline-none disabled:cursor-not-allowed disabled:shadow-none;
 	}
 
 	.button--lg {
