Updated collection pages

--- a/src/pages/blog/tags/index.astro
+++ b/src/pages/blog/tags/index.astro
@@ -16,6 +16,5 @@ const allPosts = await getCollection('blog')
 ---
 
 <Layout>
-	<Hero title="Tags" />
-	<BlogPosts data={allPosts} />
+	Hello World
 </Layout>
