--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,9 +6,6 @@
 // Components
 // - Layout
 import Layout from '../../layouts/Layout.astro'
-// - UI
-import Hero from '../../components/blocks/hero/PageHeader.astro'
-import BlogPosts from '../../components/blocks/blog/BlogPosts.astro'
 
 // Data
 import { getCollection } from 'astro:content'
@@ -16,20 +13,14 @@ import { getCollection } from 'astro:content'
 // Content
 // - SEO
 const SEO = {
-	title: 'Foxi | Latest Foxi News and updates',
+	title: 'Lorem',
 	description:
-		"Explore Foxi's latest news designed to enhance productivity, ensure top-notch security, and integrate seamlessly with your favorite tools. Join thousands of satisfied users and transform your workflow with Foxi today!"
-}
-// - Page Header
-const header = {
-	title: 'The <strong>Foxi</strong> Blog. Tips, Updates & Stories',
-	text: 'Stay informed, stay productive. All the latest from the world of Foxi.'
+		"Lorem ipsum dolor sit amet consectetur adipisicing elit."
 }
 
 const allPosts = await getCollection('blog')
 ---
 
 <Layout title={SEO.title} description={SEO.description}>
-	<Hero title={header.title} text={header.text} />
-	<BlogPosts data={allPosts} />
+	Hello World
 </Layout>
