--- a/src/pages/blog/tags/[tag].astro
+++ b/src/pages/blog/tags/[tag].astro
@@ -6,9 +6,7 @@
 // Components
 // - Layout
 import Layout from '../../../layouts/Layout.astro'
-// - UI
-import Hero from '../../../components/blocks/hero/PageHeader.astro'
-import BlogPosts from '../../../components/blocks/blog/BlogPosts.astro'
+
 
 // Data
 import { getCollection } from 'astro:content'
@@ -30,19 +28,13 @@ const { posts } = Astro.props
 // Content
 // - SEO
 const SEO = {
-	title: `Foxi | posts tagges as ` + tag,
+	title: `Posts tagged as ` + tag,
 	description:
-		"Explore Foxi's latest news designed to enhance productivity, ensure top-notch security, and integrate seamlessly with your favorite tools. Join thousands of satisfied users and transform your workflow with Foxi today!"
+		"Posts tagged as " + tag
 }
 
-// - Page Header
-const header = {
-	title: `Foxi posts about <br><strong>` + tag + `</strong>`,
-	text: `Stay informed, stay productive with all the latest fromFoxi.`
-}
 ---
 
 <Layout title={SEO.title} description={SEO.description}>
-	<Hero title={header.title} text={header.text} />
-	<BlogPosts data={posts} />
+	Hello World
 </Layout>
