--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,24 @@
 // Components
 // - Layout
 import Layout from '../layouts/Layout.astro'
+import Section from '../components/ui/Section.astro'
+import Row from '../components/ui/Row.astro'
+import Col from '../components/ui/Col.astro'
 
 // - SEO
 const SEO = {
-	title: 'Foxi | Your Productivity Toolkit',
+	title: 'Lorem',
 	description:
-		'Foxi is a powerful productivity toolkit designed to enhance your workflow and boost your productivity. With features like analytics, security, and integrations, Foxi is the perfect solution for your business.'
+		"Lorem ipsum dolor sit amet consectetur adipisicing elit."
 }
 ---
 
 <Layout title={SEO.title} description={SEO.description} >
+	<Section>
+		<Row>
+			<Col span="12">
+				Hello World
+			</Col>
+		</Row>
+	</Section>
 </Layout>
