--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@source inline("col-{span-{1,2,3,4,5,6,7,8,9,10,11,12},span-mobile-{1,2,3,4,5,6,7,8,9,10,11,12}}");
 
 @theme {
 	/* Colors */
